--- a/appproject/accounts/templates/system/_content.html
+++ b/appproject/accounts/templates/system/_content.html
@@ -22,6 +22,7 @@
           <button id="addTextBtn" role="menuitem"><i class="fas fa-i-cursor"></i> テキスト入力</button>
           <button id="addNumberBtn" role="menuitem"><i class="fas fa-hashtag"></i> 数値入力</button>
           <button id="addDatetimeBtn" role="menuitem"><i class="fas fa-calendar-alt"></i> 日時</button>
+          <button id="addTextBoxBtn" role="menuitem"><i class="fas fa-align-left"></i> テキストボックス</button>
           <button id="addCheckboxBtn" role="menuitem"><i class="fas fa-check-square"></i> チェックボックス</button>
           <button id="addRadioBtn" role="menuitem"><i class="fas fa-dot-circle"></i> ラジオボタン</button>
         </div>
